@@ -3,14 +3,18 @@ package com.inyoucells.myproj.service.driver;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.inyoucells.myproj.data.DriverFakeProvider;
 import com.inyoucells.myproj.data.DriverRepo;
+import com.inyoucells.myproj.data.UserRepo;
 import com.inyoucells.myproj.models.Driver;
+import com.inyoucells.myproj.models.errors.ApiError;
 import com.inyoucells.myproj.models.errors.HttpErrorMessage;
-import com.inyoucells.myproj.service.auth.AuthConsts;
+import com.inyoucells.myproj.models.response.AddDriverResponse;
+import com.inyoucells.myproj.models.response.DriverResponse;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
@@ -18,11 +22,14 @@ import org.springframework.test.web.servlet.ResultActions;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
 
 import java.util.Arrays;
-import java.util.Calendar;
 import java.util.Collections;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -39,12 +46,16 @@ class DriverControllerTest {
     @Autowired
     private DriverRepo driverRepo;
 
+    @Autowired
+    private UserRepo userRepo;
+
     private final DriverFakeProvider driverFakeProvider = new DriverFakeProvider(0);
 
     @BeforeEach
     void setup() {
         driverRepo.clean();
         driverFakeProvider.reset();
+
     }
 
     @Test
@@ -52,8 +63,8 @@ class DriverControllerTest {
         MockHttpServletRequestBuilder requestBuilder = get("/driver").header("token", "1_1");
         ResultActions resultActions = mockMvc.perform(requestBuilder);
         MvcResult result = resultActions.andExpect(status().isUnauthorized()).andReturn();
-
-        assertEquals("\"" + HttpErrorMessage.AUTHORIZATION_IS_OUTDATED.getMessage() + "\"", result.getResponse().getContentAsString());
+        ApiError apiError = objectMapper.readValue(result.getResponse().getContentAsString(), ApiError.class);
+        assertEquals(new ApiError(HttpStatus.UNAUTHORIZED, HttpErrorMessage.AUTHORIZATION_IS_OUTDATED), apiError);
     }
 
     @Test
@@ -64,8 +75,8 @@ class DriverControllerTest {
         ResultActions resultActions = mockMvc.perform(requestBuilder);
 
         MvcResult result = resultActions.andExpect(status().isOk()).andReturn();
-        List<Driver> drivers = Arrays.asList(objectMapper.readValue(result.getResponse().getContentAsString(), Driver[].class));
-        assertEquals(Collections.emptyList(), drivers);
+        DriverResponse driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertEquals(Collections.emptyList(), driverResponse.getDrivers());
     }
 
     @Test
@@ -90,8 +101,8 @@ class DriverControllerTest {
         ResultActions resultActions = mockMvc.perform(requestBuilder);
 
         MvcResult result = resultActions.andExpect(status().isOk()).andReturn();
-        List<Driver> drivers = Arrays.asList(objectMapper.readValue(result.getResponse().getContentAsString(), Driver[].class));
-        assertEquals(Arrays.asList(driver1, driver2), drivers);
+        DriverResponse driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertTrue(driverResponse.getDrivers().stream().map(driver -> new Driver(driver.getName(), driver.getLicence())).collect(Collectors.toList()).containsAll(Arrays.asList(driver1, driver2)));
     }
 
     @Test
@@ -109,17 +120,18 @@ class DriverControllerTest {
                 .content(objectMapper.writeValueAsString(driver2));
 
         mockMvc.perform(requestBuilder1).andExpect(status().isOk());
-        mockMvc.perform(requestBuilder2).andExpect(status().isOk());
+        ResultActions resultActions = mockMvc.perform(requestBuilder2).andExpect(status().isOk());
+        AddDriverResponse addDriverResponse = objectMapper.readValue(resultActions.andReturn().getResponse().getContentAsString(), AddDriverResponse.class);
 
         MockHttpServletRequestBuilder requestBuilder = get("/driver").header("token", token);
 
-        ResultActions resultActions = mockMvc.perform(requestBuilder);
+        resultActions = mockMvc.perform(requestBuilder);
 
         MvcResult result = resultActions.andExpect(status().isOk()).andReturn();
-        List<Driver> drivers = Arrays.asList(objectMapper.readValue(result.getResponse().getContentAsString(), Driver[].class));
-        assertEquals(List.of(driver1, driver2), drivers);
+        DriverResponse driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertTrue(driverResponse.getDrivers().stream().map(driver -> new Driver(driver.getName(), driver.getLicence())).collect(Collectors.toList()).containsAll(Arrays.asList(driver1, driver2)));
 
-        MockHttpServletRequestBuilder requestBuilder3 = delete("/driver/{driverId}", driver2.getId())
+        MockHttpServletRequestBuilder requestBuilder3 = delete("/driver/{driverId}", addDriverResponse.getDriverId())
                 .header("token", token);
 
         mockMvc.perform(requestBuilder3).andExpect(status().isOk());
@@ -129,8 +141,9 @@ class DriverControllerTest {
         resultActions = mockMvc.perform(requestBuilder);
 
         result = resultActions.andExpect(status().isOk()).andReturn();
-        drivers = Arrays.asList(objectMapper.readValue(result.getResponse().getContentAsString(), Driver[].class));
-        assertEquals(List.of(driver1), drivers);
+        driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertTrue(driverResponse.getDrivers().stream().map(driver -> new Driver(driver.getName(), driver.getLicence())).collect(Collectors.toList()).contains(driver1));
+
     }
 
     @Test
@@ -145,9 +158,44 @@ class DriverControllerTest {
         mockMvc.perform(requestBuilder1).andExpect(status().isOk());
     }
 
+    @Test
+    void getDrivers_WithPagination() throws Exception {
+        String token = createValidToken();
+        List<Driver> drivers = Stream.generate(driverFakeProvider::generateDriver).limit(20).collect(Collectors.toList());
+        for (Driver driver : drivers) {
+            MockHttpServletRequestBuilder requestBuilder1 = post("/driver")
+                    .header("token", token)
+                    .contentType(MediaType.APPLICATION_JSON)
+                    .content(objectMapper.writeValueAsString(driver));
+            mockMvc.perform(requestBuilder1).andExpect(status().isOk());
+        }
+
+        MockHttpServletRequestBuilder requestBuilder = get("/driver")
+                .header("token", token)
+                .param("page", "0")
+                .param("size", "10");
+
+        ResultActions resultActions = mockMvc.perform(requestBuilder);
+        MvcResult result = resultActions.andExpect(status().isOk()).andReturn();
+        DriverResponse driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertTrue(driverResponse.getDrivers().stream().map(driver -> new Driver(driver.getName(), driver.getLicence())).collect(Collectors.toList()).containsAll(drivers.subList(0, 9)));
+
+        requestBuilder = get("/driver")
+                .header("token", token)
+                .param("page", "1")
+                .param("size", "10");
+
+        resultActions = mockMvc.perform(requestBuilder);
+        result = resultActions.andExpect(status().isOk()).andReturn();
+        driverResponse = objectMapper.readValue(result.getResponse().getContentAsString(), DriverResponse.class);
+        assertTrue(driverResponse.getDrivers().stream().map(driver -> new Driver(driver.getName(), driver.getLicence())).collect(Collectors.toList()).containsAll(drivers.subList(10, 19)));
+
+    }
+
     private String createValidToken() {
-        Calendar calendar = Calendar.getInstance();
-        calendar.add(Calendar.MILLISECOND, AuthConsts.TOKEN_EXPIRATION_TIME * 2);
-        return "1_" + calendar.getTimeInMillis();
+        userRepo.clean();
+        Optional<String> token = userRepo.addUser("testEmail", "pass");
+        assertTrue(token.isPresent());
+        return token.get();
     }
 }
